--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,30 @@
 version: '3.9'
 
-service:
+services:
   db:
     image: postgres:14
     container_name: postgres-db
     restart: always
-    enviroment: 
+    environment: 
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSGRES_DB: ${DB_NAME}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./db:/docker-entrypoint-initdb.d
+  
+  storage_device:
+    build: ./services/storage
+    container_name: storage-device
+    restart: always
+    ports:
+      - "5000:5000"
+    environment:
+      DB_URL: postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
+    depends_on:
+      - db
 
 volumes:
   db-data:
