feat: Modified frontend Dockerfile to include Nginx

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,16 +1,18 @@
-# Use an official Nginx image as the base image
-FROM nginx:alpine
+# Use Nginx as the base image
+FROM nginx:mainline-perl
 
-# Set the working directory inside the container
-WORKDIR /usr/share/nginx/html
 
-# Copy the frontend files from the host to the container
-COPY src/index.html /usr/share/nginx/html/index.html
-COPY src/style.css /usr/share/nginx/html/style.css
-COPY src/script.js /usr/share/nginx/html/script.js
+# Set the working directory to /usr/share/nginx/html (default for Nginx)
+WORKDIR /usr/share/nginx/html/
 
-# Expose port 80 to the outside world
+# Copy your web interface files to the Nginx HTML directory
+COPY ./src /usr/share/nginx/html/
+
+# Copy your custom nginx.conf file to the appropriate directory
+COPY ./nginx.conf /etc/nginx/nginx.conf.template
+
+# Expose the port Nginx will serve (e.g., port 80)
 EXPOSE 80
 
-# Start Nginx server
-CMD ["nginx", "-g", "daemon off;"]
+# Run envsubst to substitute environment variables and generate the final nginx.conf
+CMD envsubst '$BE_CARBS_URL $BE_DAIRY_URL $BE_MEATS_URL $BE_VEGETABLES_URL' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;' 
