--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.9'
 
 services:
+
   db:
     image: postgres:14
     container_name: postgres-db
@@ -85,6 +86,26 @@ services:
       STORAGE_DEVICE_URL: http://storage_device:5000
     depends_on:
       - storage_device
+
+  fe:
+    build:
+      context: ./services/frontend
+      dockerfile: Dockerfile
+    container_name: fe
+    restart: always
+    ports:
+      - "80:80"
+    environment:
+      BE_CARBS_URL: http://be_carbs
+      BE_DAIRY_URL: http://be_dairy
+      BE_MEATS_URL: http://be_meats
+      BE_VEGETABLES_URL: http://be_vegetables
+    depends_on:
+      - storage_device
+      - be_carbs
+      - be_dairy
+      - be_meats
+      - be_vegetables
 
 volumes:
   db-data:
