--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 .env
 bin
 .vscode
-secrets
+k8s/secrets/*
+!k8s/secrets/README.md
 .vagrant
 .cache
 .terraform
 .terraform.lock.hcl
 terraform.tfstate
 terraform.tfstate.backup
+inventory.ini
