fix: general improvements and typos

--- a/k8s/k8s-db/init-job.yaml
+++ b/k8s/k8s-db/init-job.yaml
@@ -39,4 +39,4 @@ spec:
       - name: script-volume
         configMap:
           name: db-init-scripts
-  backoffLimit: 4  # Retries in case the job fails
+  # backoffLimit: 4  # Retries in case the job fails
