--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,3 +61,7 @@ deploy:
             ansible-playbook ansible-deploy.yml
     needs:
         - build
+    rules:
+        - if: $CI_COMMIT_BRANCH == "master"
+          changes:
+              - services/**
