chore: more debug info

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ debug:
     script:
         - |
             echo "Branch: $CI_COMMIT_BRANCH"
-            echo "Files changed in this commit:"
+            echo "Files changed in this commit: ($CI_COMMIT_BEFORE_SHA -> $CI_COMMIT_SHA)"
             git diff --name-only $CI_COMMIT_BEFORE_SHA $CI_COMMIT_SHA | grep 'services/'
     rules:
         - when: always
