--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,6 +50,9 @@ build:
         - if: $CI_COMMIT_BRANCH == "master"
           changes:
               - services/**
+        - if: $CI_COMMIT_BRANCH == "master"
+          changes:
+              - services/**/*
 
 deploy:
     tags:
@@ -66,6 +69,9 @@ deploy:
         - if: $CI_COMMIT_BRANCH == "master"
           changes:
               - services/**
+        - if: $CI_COMMIT_BRANCH == "master"
+          changes:
+              - services/**/*
 
 debug:
     tags:
