fix: nginx request id header

--- a/services/frontend/nginx.conf
+++ b/services/frontend/nginx.conf
@@ -33,87 +33,87 @@ http {
         }
 
         location /chicken {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_MEATS_URL}; # Meats microservice
         }
 
         location /pasta {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_CARBS_URL}; # Carbs microservice
         }
 
         location /quinoa {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_CARBS_URL}; # Carbs microservice
         }
 
         location /spinach {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_VEGETABLES_URL}; # Vegetables microservice
         }
 
         location /cauliflower {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_VEGETABLES_URL}; # Vegetables microservice
         }
 
         location /milk {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_DAIRY_URL}; # Dairy microservice
         }
 
         location /beef {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_MEATS_URL}; # Meats microservice
         }
 
         location /salmon {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_MEATS_URL}; # Meats microservice
         }
 
         location /yogurt {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_DAIRY_URL}; # Dairy microservice
         }
 
         location /rice {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_CARBS_URL}; # Carbs microservice
         }
 
         location /black-beans {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_VEGETABLES_URL}; # Vegetables microservice
         }
 
         location /potato {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_CARBS_URL}; # Carbs microservice
         }
 
         location /butter {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_DAIRY_URL}; # Dairy microservice
         }
 
         location /pork {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_MEATS_URL}; # Meats microservice
         }
 
         location /cheese {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_DAIRY_URL}; # Dairy microservice
         }
 
         location /broccoli {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             proxy_pass ${BE_VEGETABLES_URL}; # Vegetables microservice
         }
 
         location ~* \.(js|jpg|png|css)$ {
-            add_header Request-Id $request_counter;
+            proxy_set_header Request-Id $request_counter;
             root /usr/share/nginx/html/;
         }
     }
